NetBSD Problem Report #50529

From www@NetBSD.org  Fri Dec 11 09:53:00 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8343AA6660
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 09:53:00 +0000 (UTC)
Message-Id: <20151211095259.A97C1A6681@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 09:52:59 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/netinet/sctp_usrreq.c:983: sizeof on sizeof ?
X-Send-Pr-Version: www-1.0

>Number:         50529
>Category:       kern
>Synopsis:       src/sys/netinet/sctp_usrreq.c:983: sizeof on sizeof ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 09:55:01 +0000 2015
>Closed-Date:    Sun Dec 13 20:27:43 +0000 2015
>Last-Modified:  Sun Dec 13 20:27:43 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/netinet/sctp_usrreq.c:983]: (warning) Calling 'sizeof' on 'sizeof'.

    actual += sizeof(sizeof(struct sockaddr_in6));

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50529 CVS commit: src/sys/netinet
Date: Sun, 13 Dec 2015 13:58:13 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 18:58:13 UTC 2015

 Modified Files:
 	src/sys/netinet: sctp_usrreq.c

 Log Message:
 PR/50529: David Binderman: Remove double sizeof


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/netinet/sctp_usrreq.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:27:43 +0000
State-Changed-Why:
christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.