PR/50529: David Binderman: Remove double sizeof